New loading animation, trasnlations, files validation at new Post, removed <jhi-alert>'s

--- a/src/main/webapp/app/entities/audio-file/audio-file-detail.component.html
+++ b/src/main/webapp/app/entities/audio-file/audio-file-detail.component.html
@@ -3,7 +3,7 @@
         <div *ngIf="audioFile">
             <h2 class="text-center"><span jhiTranslate="soundgramApp.audioFile.detail.title">Audio File</span> {{audioFile.title.split('.').slice(0, -1).join('.')}}</h2>
             <hr>
-            <jhi-alert-error></jhi-alert-error>
+            <!--<jhi-alert-error></jhi-alert-error>-->
             <dl class="row-md jh-entity-details text-center">
                 <dt><span jhiTranslate="soundgramApp.audioFile.title">Title</span></dt>
                 <dd>
