--- a/src/main/webapp/app/entities/audio-file/audio-file-update.component.html
+++ b/src/main/webapp/app/entities/audio-file/audio-file-update.component.html
@@ -3,7 +3,7 @@
         <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
             <h2 id="jhi-audio-file-heading" jhiTranslate="soundgramApp.audioFile.home.createOrEditLabel">Create or edit a Audio File</h2>
             <div>
-                <jhi-alert-error></jhi-alert-error>
+                <!--<jhi-alert-error></jhi-alert-error>-->
 
                 <div style="text-align:center">
                     <div [innerHtml]='msg'></div>
