--- a/src/main/webapp/app/entities/comment/comment-detail.component.html
+++ b/src/main/webapp/app/entities/comment/comment-detail.component.html
@@ -3,7 +3,7 @@
         <div *ngIf="comment">
             <h2><span jhiTranslate="soundgramApp.comment.detail.title">Comment</span> {{comment.id}}</h2>
             <hr>
-            <jhi-alert-error></jhi-alert-error>
+            <!--<jhi-alert-error></jhi-alert-error>-->
             <dl class="row-md jh-entity-details">
                 <dt><span jhiTranslate="soundgramApp.comment.textContent">Text Content</span></dt>
                 <dd>
