--- a/src/main/webapp/app/entities/followed-user/followed-user-detail.component.html
+++ b/src/main/webapp/app/entities/followed-user/followed-user-detail.component.html
@@ -3,7 +3,7 @@
         <div *ngIf="followedUser">
             <h2><span jhiTranslate="soundgramApp.followedUser.detail.title">Followed User</span> {{followedUser.id}}</h2>
             <hr>
-            <jhi-alert-error></jhi-alert-error>
+            <!--<jhi-alert-error></jhi-alert-error>-->
             <dl class="row-md jh-entity-details">
                 <dt><span jhiTranslate="soundgramApp.followedUser.followedUserId">Followed User Id</span></dt>
                 <dd>
