--- a/src/main/webapp/app/entities/image/image-detail.component.html
+++ b/src/main/webapp/app/entities/image/image-detail.component.html
@@ -3,7 +3,7 @@
         <div *ngIf="image">
             <h2><span jhiTranslate="soundgramApp.image.detail.title">Image</span> {{image.id}}</h2>
             <hr>
-            <jhi-alert-error></jhi-alert-error>
+            <!--<jhi-alert-error></jhi-alert-error>-->
             <dl class="row-md jh-entity-details">
                 <dt><span jhiTranslate="soundgramApp.image.path">Path</span></dt>
                 <dd>
