--- a/src/main/webapp/app/entities/tag/tag-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/tag/tag-delete-dialog.component.html
@@ -5,7 +5,7 @@
                 (click)="clear()">&times;</button>
     </div>
     <div class="modal-body">
-        <jhi-alert-error></jhi-alert-error>
+        <!--<jhi-alert-error></jhi-alert-error>-->
         <p id="jhi-delete-tag-heading" jhiTranslate="soundgramApp.tag.delete.question" [translateValues]="{id: tag.id}">Are you sure you want to delete this Tag?</p>
     </div>
     <div class="modal-footer">
