--- a/src/main/webapp/app/entities/tag/tag-detail.component.html
+++ b/src/main/webapp/app/entities/tag/tag-detail.component.html
@@ -3,7 +3,7 @@
         <div *ngIf="tag">
             <h2><span jhiTranslate="soundgramApp.tag.detail.title">Tag: </span> {{tag.name}}</h2>
             <hr>
-            <jhi-alert-error></jhi-alert-error>
+            <!--<jhi-alert-error></jhi-alert-error>-->
             <dl class="row-md jh-entity-details">
 
                 <dt><span jhiTranslate="soundgramApp.tag.user">Users: </span></dt>
