--- a/src/main/webapp/app/entities/tag/tag.component.html
+++ b/src/main/webapp/app/entities/tag/tag.component.html
@@ -8,8 +8,8 @@
             </span>
         </button>
     </h2>
-    <jhi-alert-error></jhi-alert-error>
-    <jhi-alert></jhi-alert>
+<!--    <jhi-alert-error></jhi-alert-error>
+    <jhi-alert></jhi-alert>-->
     <div class="row">
         <div class="col-sm-8 center">
             <form name="searchForm" class="form-inline">
