--- a/src/main/webapp/app/entities/user-extra/user-extra-detail.component.html
+++ b/src/main/webapp/app/entities/user-extra/user-extra-detail.component.html
@@ -3,7 +3,7 @@
         <div *ngIf="userExtra">
             <h2><span jhiTranslate="soundgramApp.userExtra.detail.title">User Extra</span> {{userExtra.id}}</h2>
             <hr>
-            <jhi-alert-error></jhi-alert-error>
+            <!--<jhi-alert-error></jhi-alert-error>-->
             <dl class="row-md jh-entity-details">
                 <dt><span jhiTranslate="soundgramApp.userExtra.userLocation">User Location</span></dt>
                 <dd>
