--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -63,8 +63,8 @@
 
                         </div>-->
 
-            <jhi-alert-error></jhi-alert-error>
-            <jhi-alert></jhi-alert>
+<!--            <jhi-alert-error></jhi-alert-error>
+            <jhi-alert></jhi-alert>-->
             <div class="row">
                 <div class="col-sm-8 center">
                     <form name="searchForm" class="form-inline">
