--- a/src/main/webapp/app/users/users.component.html
+++ b/src/main/webapp/app/users/users.component.html
@@ -32,7 +32,7 @@
             </form>
         </div>
     </div>
-    <jhi-alert></jhi-alert>
+<!--    <jhi-alert></jhi-alert>-->
     <div class="users-section">
         <div class="table-responsive table-window" *ngIf="usersAvatars">
             <table class="table table-striped">
