--- a/src/main/webapp/app/entities/audio-file/audio-file-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/audio-file/audio-file-delete-dialog.component.html
@@ -5,7 +5,7 @@
                 (click)="clear()">&times;</button>
     </div>
     <div class="modal-body">
-        <jhi-alert-error></jhi-alert-error>
+        <!--<jhi-alert-error></jhi-alert-error>-->
         <p id="jhi-delete-audioFile-heading" jhiTranslate="soundgramApp.audioFile.delete.question" [translateValues]="{id: audioFile.id}">Are you sure you want to delete this Audio File?</p>
     </div>
     <div class="modal-footer">
