--- a/src/main/webapp/app/entities/comment/comment-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/comment/comment-delete-dialog.component.html
@@ -5,7 +5,7 @@
                 (click)="clear()">&times;</button>
     </div>
     <div class="modal-body">
-        <jhi-alert-error></jhi-alert-error>
+        <!--<jhi-alert-error></jhi-alert-error>-->
         <p id="jhi-delete-comment-heading" jhiTranslate="soundgramApp.comment.delete.question" [translateValues]="{id: comment.id}">Are you sure you want to delete this Comment?</p>
     </div>
     <div class="modal-footer">
