--- a/src/main/webapp/app/entities/followed-user/followed-user-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/followed-user/followed-user-delete-dialog.component.html
@@ -5,7 +5,7 @@
                 (click)="clear()">&times;</button>
     </div>
     <div class="modal-body">
-        <jhi-alert-error></jhi-alert-error>
+        <!--<jhi-alert-error></jhi-alert-error>-->
         <p id="jhi-delete-followedUser-heading" jhiTranslate="soundgramApp.followedUser.delete.question" [translateValues]="{id: followedUser.id}">Are you sure you want to delete this Followed User?</p>
     </div>
     <div class="modal-footer">
