--- a/src/main/webapp/app/entities/followed-user/followed-user-update.component.html
+++ b/src/main/webapp/app/entities/followed-user/followed-user-update.component.html
@@ -3,7 +3,7 @@
         <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
             <h2 id="jhi-followed-user-heading" jhiTranslate="soundgramApp.followedUser.home.createOrEditLabel">Create or edit a Followed User</h2>
             <div>
-                <jhi-alert-error></jhi-alert-error>
+                <!--<jhi-alert-error></jhi-alert-error>-->
                 <div class="form-group" [hidden]="!editForm.get('id').value">
                     <label for="id" jhiTranslate="global.field.id">ID</label>
                     <input type="text" class="form-control" id="id" name="id" formControlName="id"
