--- a/src/main/webapp/app/entities/image/image-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/image/image-delete-dialog.component.html
@@ -5,7 +5,7 @@
                 (click)="clear()">&times;</button>
     </div>
     <div class="modal-body">
-        <jhi-alert-error></jhi-alert-error>
+        <!--<jhi-alert-error></jhi-alert-error>-->
         <p id="jhi-delete-image-heading" jhiTranslate="soundgramApp.image.delete.question" [translateValues]="{id: image.id}">Are you sure you want to delete this Image?</p>
     </div>
     <div class="modal-footer">
