--- a/src/main/webapp/app/entities/post/post-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/post/post-delete-dialog.component.html
@@ -5,7 +5,7 @@
                 (click)="clear()">&times;</button>
     </div>
     <div class="modal-body">
-        <jhi-alert-error></jhi-alert-error>
+        <!--<jhi-alert-error></jhi-alert-error>-->
         <p id="jhi-delete-post-heading" jhiTranslate="soundgramApp.post.delete.question" [translateValues]="{id: post.id}">Are you sure you want to delete this Post?</p>
     </div>
     <div class="modal-footer">
