--- a/src/main/webapp/app/entities/post/post-new/post-new.component.html
+++ b/src/main/webapp/app/entities/post/post-new/post-new.component.html
@@ -5,7 +5,7 @@
                 <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
                     <h2 id="jhi-post-heading" class="text-center">Create new Post</h2>
                     <div>
-                        <jhi-alert-error></jhi-alert-error>
+                        <!--<jhi-alert-error></jhi-alert-error>-->
                         <!--                <div class="form-group" [hidden]="!editForm.get('id').value">-->
                         <!--                    <label for="id" jhiTranslate="global.field.id">ID</label>-->
                         <!--                    <input type="text" class="form-control" id="id" name="id" formControlName="id"-->
