--- a/src/main/webapp/app/entities/user-extra/user-extra-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/user-extra/user-extra-delete-dialog.component.html
@@ -5,7 +5,7 @@
                 (click)="clear()">&times;</button>
     </div>
     <div class="modal-body">
-        <jhi-alert-error></jhi-alert-error>
+        <!--<jhi-alert-error></jhi-alert-error>-->
         <p id="jhi-delete-userExtra-heading" jhiTranslate="soundgramApp.userExtra.delete.question" [translateValues]="{id: userExtra.id}">Are you sure you want to delete this User Extra?</p>
     </div>
     <div class="modal-footer">
