--- a/src/main/webapp/app/entities/user-extra/user-extra-update.component.html
+++ b/src/main/webapp/app/entities/user-extra/user-extra-update.component.html
@@ -3,7 +3,7 @@
         <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
             <h2 id="jhi-user-extra-heading">Edit your extra data</h2> <!--jhiTranslate="soundgramApp.userExtra.home.createOrEditLabel"-->
             <div>
-                <jhi-alert-error></jhi-alert-error>
+                <!--<jhi-alert-error></jhi-alert-error>-->
                 <div class="form-group" [hidden]="!editForm.get('id').value">
                     <label for="id" jhiTranslate="global.field.id">ID</label>
                     <input type="text" class="form-control" id="id" name="id" formControlName="id"
