--- a/src/main/webapp/app/music/music.component.html
+++ b/src/main/webapp/app/music/music.component.html
@@ -40,8 +40,8 @@
             </div>
         </h2>
     </div>
-    <jhi-alert-error></jhi-alert-error>
-    <jhi-alert></jhi-alert>
+<!--    <jhi-alert-error></jhi-alert-error>
+    <jhi-alert></jhi-alert>-->
     <div class="row">
         <div class="col-sm-8 center">
             <form name="searchForm" class="form-inline">
