Post layout, screenshots, README.md

--- a/src/main/webapp/app/shared/postObject/post-object.component.scss
+++ b/src/main/webapp/app/shared/postObject/post-object.component.scss
@@ -65,7 +65,8 @@
   border-radius: 10px;
   border: 2px solid #522b72;
   background-color: #ffffff;
-  // max-width: 600px;
+  max-width: 1000px;
+  // max-width: 25cm;
   min-height: 500px;
   min-width: 350px;
   padding-bottom: 20px;
