--- a/src/main/webapp/app/shared/postObject/post-object.component.html
+++ b/src/main/webapp/app/shared/postObject/post-object.component.html
@@ -1,8 +1,8 @@
 <div class="row justify-content-center">
-    <div class="col-8">
+<!--    <div class="col-8">-->
         <div *ngIf="post">
             <div class="container posts-content">
-                <div class="row">
+<!--                <div class="row">-->
                     <div class="col-md-12">
                         <div class="card post-window mb-3">
                             <div class="card-body">
@@ -86,8 +86,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
+<!--                </div>-->
             </div>
         </div>
-    </div>
+<!--    </div>-->
 </div>
