--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -16,12 +16,12 @@ h4 {
 }
 
 .navbar {
-  font-family: 'Righteous';
+  font-family: 'Righteous', sans-serif;
 }
 
 h1,
 h2 {
-  font-family: 'Righteous';
+  font-family: 'Righteous', sans-serif;
   font-weight: 300;
 }
 
@@ -32,7 +32,7 @@ button {
   color: #fff;
   border: 1px solid #fff;
   margin-top: 20px;*/
-  font-family: 'Bungee';
+  font-family: 'Bungee', sans-serif; // Bungee
 }
 
 /* Increase contrast of links to get 100% on Lighthouse Accessability Audit. Override this color if you want to change the link color, or use a Bootswatch theme */
