--- a/src/main/webapp/app/music/music.component.html
+++ b/src/main/webapp/app/music/music.component.html
@@ -75,7 +75,7 @@
             </thead>
             <tbody>
             <tr *ngFor="let audioFile of audioFiles ;trackBy: trackId">
-                <td>{{audioFile.title.split('.').slice(0, -1).join('.')}}</td>
+                <td>{{audioFile.audioPath}}</td> <!--audioFile.title.split('.').slice(0, -1).join('.')-->
                 <td class="narrow-hide"><a
                     [routerLink]="['/', audioFile.post.user.login, 'view']">{{audioFile.post.user.login}}</a></td>
                 <td class="narrow-hide">
