--- a/src/main/webapp/app/entities/post/post-update.component.html
+++ b/src/main/webapp/app/entities/post/post-update.component.html
@@ -19,7 +19,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-7 center">
+                        <div class="col-md-7">
                             <div class="padding-10" *ngIf="currentAudioFile && !newAudioSelected">
                                 <jhi-post-player [audioFile]="audioFile"></jhi-post-player>
                             </div>
@@ -151,101 +151,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <!--                                <div *ngIf="postTags">
-                                                                <h4>Post tags</h4>
-                                                                <ul class="tags">
-                                                                    <li *ngFor="let tag of postTags">
-                                                                        <span class="badge">{{tag.name}}</span> {{tag.id}}
-                                                                        <button type="button" (click)="deleteTagFromPost(tag)"
-                                                                                class="btn btn-danger btn-sm">
-                                                                            <fa-icon [icon]="'times'"></fa-icon>
-                                                                            <span class="d-none d-md-inline">Delete tag from this post</span>
-                                                                        </button>
-                                                                    </li>
-                                                                </ul>
-                                                            </div>-->
-
-                            <!--                                <div class="col-md-6">
-                                                                <form name="form" role="form" (ngSubmit)="makeNewTag()" [formGroup]="tagForm"
-                                                                      *ngIf="!success">
-                                                                    <div class="form-group">
-                                                                        <label class="form-control-label" for="tagName">Enter tag name</label>
-                                                                        <input type="text" class="form-control" id="tagName" name="tagName"
-                                                                               formControlName="tagName">
-                                                                        <div
-                                                                            *ngIf="tagForm.get('tagName').invalid && (tagForm.get('tagName').dirty || tagForm.get('tagName').touched)">
-                                                                            <small class="form-text text-danger"
-                                                                                   *ngIf="tagForm.get('tagName').errors.required">
-                                                                                Tag name is required.
-                                                                            </small>
-                                                                            <small class="form-text text-danger"
-                                                                                   *ngIf="tagForm.get('tagName').errors.minlength">
-                                                                                Tag is required to be at least 1 character.
-                                                                            </small>
-                                                                            <small class="form-text text-danger"
-                                                                                   *ngIf="tagForm.get('tagName').errors.maxlength">
-                                                                                Tag cannot be longer than 50 characters.
-                                                                            </small>
-                                                                            <small class="form-text text-danger"
-                                                                                   *ngIf="tagForm.get('tagName').errors.pattern">
-                                                                                Tag can only contain letters and digits.
-                                                                            </small>
-                                                                        </div>
-                                                                    </div>
-                                                                    <button type="submit" [disabled]="tagForm.invalid" class="btn btn-primary">Assign
-                                                                        tag to
-                                                                        this post
-                                                                    </button>
-                                                                </form>
-
-                                                                <div *ngIf="postTags">
-                                                                    <h4>Post tags</h4>
-                                                                    <ul class="tags">
-                                                                        <li *ngFor="let tag of postTags">
-                                                                            <span class="badge">{{tag.name}}</span> {{tag.id}}
-                                                                            <button type="button" (click)="deleteTagFromPost(tag)"
-                                                                                    class="btn btn-danger btn-sm">
-                                                                                <fa-icon [icon]="'times'"></fa-icon>
-                                                                                <span class="d-none d-md-inline">Delete tag from this post</span>
-                                                                            </button>
-                                                                        </li>
-                                                                    </ul>
-                                                                </div>-->
-                        </div>
-
-
-                        <!--                <button type="file" id="jh-create-audio" class="btn btn-primary jh-create-entity create-audio-file" (change)="selectFile($event)">
-                                            <fa-icon [icon]="'plus'"></fa-icon>
-                                            <span class="hidden-sm-down" >
-                                                Add audio file
-                                            </span>
-                                        </button>-->
-
-                        <!--                            <div *ngIf="currentAudioFile">
-                                                        <jhi-post-player [audioFile]="audioFile"></jhi-post-player>
-                                                    </div>
-                                                    <div style="text-align:center">
-                                                        <label>
-                                                            <span>Dodaj plik audio: </span>
-                                                            <input type="file" (change)="selectAudioFile($event)">
-                                                        </label>
-                                                        &lt;!&ndash;<button [disabled]="!selectedFiles" (click)="upload()">Upload</button>&ndash;&gt;
-                                                    </div>
-                                                    <br>
-                                                    <div *ngIf="displayImage">
-                                                        <img [src]="displayImage"
-                                                             alt="post image"
-                                                             style="max-width:400px;width:100%;max-height:500px;height:100%">
-                                                    </div>
-                                                    <div style="text-align:center">
-                                                        <label>
-                                                            <span>Dodaj obraz: </span>
-                                                            <input type="file" (change)="selectImage($event)">
-                                                        </label>
-                                                        &lt;!&ndash;<button [disabled]="!selectedFiles" (click)="upload()">Upload</button>&ndash;&gt;
-                                                    </div>
-
-                                                    <p></p>-->
                     </div>
                     <div class="row center">
                         <button type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState()">
