--- a/src/main/webapp/app/entities/post/post.scss
+++ b/src/main/webapp/app/entities/post/post.scss
@@ -28,6 +28,13 @@
   margin: auto;
 }
 
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
+
 .text-center {
   text-align: center;
 }
