Followed user date, follow disabled when already followed, avatar service repair, comments and post front, post-update repair

--- a/src/main/webapp/app/entities/comment/comment.component.html
+++ b/src/main/webapp/app/entities/comment/comment.component.html
@@ -3,7 +3,7 @@
         <span jhiTranslate="soundgramApp.comment.home.title">Comments</span>
         <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-comment" [routerLink]="['/comment/new']">
             <fa-icon [icon]="'plus'"></fa-icon>
-            <span class="hidden-sm-down"  jhiTranslate="soundgramApp.comment.home.createLabel">
+            <span class="hidden-sm-down"  jhiTranslate="soundgramApp.comment.home.create">
             Create a new Comment
             </span>
         </button>
