--- a/src/main/webapp/app/entities/post/post-detail.component.html
+++ b/src/main/webapp/app/entities/post/post-detail.component.html
@@ -1,9 +1,6 @@
-<div class="row justify-content-center">
-    <div class="col-8">
+<div class="justify-content-center">
         <div *ngIf="post">
             <div class="container posts-content">
-                <div class="row">
-                    <div class="col-md-12">
                         <div class="card post-window mb-3">
                             <div class="card-body">
                                 <div class="media mb-3">
@@ -94,9 +91,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
         <jhi-scroll-top></jhi-scroll-top>
     </div>
 </div>
