--- a/src/main/webapp/app/entities/post/post.scss
+++ b/src/main/webapp/app/entities/post/post.scss
@@ -85,7 +85,7 @@ img {
   border-radius: 10px;
   border: 2px solid #522b72;
   background-color: #ffffff;
-  // max-width: 600px;
+  max-width: 1000px;
   min-height: 500px;
   min-width: 350px;
   padding-bottom: 20px;
