--- a/src/main/webapp/app/users/users.component.html
+++ b/src/main/webapp/app/users/users.component.html
@@ -70,7 +70,7 @@
                             </button>
                             <div *ngSwitchCase="true">
                                 <button type="button" (click)="followUser(user.user.id)"
-                                        class="btn btn-primary btn-sm" [disabled]="currentAccount.login === user.user.login">
+                                        class="btn btn-primary btn-sm" [disabled]="currentAccount.login === user.user.login || isFollowedUser(user.user)">
                                     <fa-icon [icon]="'user-plus'"></fa-icon>
                                     <span class="d-none d-md-inline" jhiTranslate="entity.action.follow">Follow</span>
                                 </button>
